<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity" android:orientation="vertical"
    android:background="@color/background">

    <TextView
        style="@style/LivroStyle"
        android:text="@string/nome_livro"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNomeLivro"
        android:inputType="text"
        android:hint="@string/hint_livro">
        <requestFocus/>
    </EditText>

    <TextView
        style="@style/LivroStyle"
        android:text="@string/editora_livro" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtEditora"
        android:inputType="text"
        android:hint="@string/hint_editora"/>

    <Button
        style="@style/LivroStyle"
        android:text="@string/cadastrar_livro"
        android:id="@+id/btnCadastraLivro" />

    <Button
        style="@style/LivroStyle"
        android:id="@+id/btnVerLivros"
        android:text="@string/lista_livro" />

</LinearLayout>
